- Changed oper access flag * to include everything
- Changed failed link messages to provide more info to +A opers
- Changed cmode +c to block all control codes (except CTCP and ISO-2022)
- Added oper access flags for umodes ydb
- Added string probability calculation to RWHO
- Added automatic rejection of certain proxy types
- Added local storage system for klines, making UNKLINE work as expected

- Reworked memory accounting:
    stats z  shows short summary
    stats Z  shows detailed reports
    MEMTRACE define in config.h to debug memory leaks, adds to Z report

- Changed general connection reporting format to reduce ambiguity
  (affects stats L, trace, etc):
    servers:  name[host]
    clients:  nick!user@host
    unknown:  name([F]ident@host)
      where name is a nick or "<unnamed>"
      where F is:
        ?  identd lookup in progress
        +  valid identd response
        -  no identd response (ident is "unknown")

- Reworked m_message().  Behavior changes:
    - corrected error responses
    - error responses only sent for PRIVMSG, not NOTICE
    - #hostmask target support removed
    - no wildcard restrictions on $servermask target
    - $$servermask target is now identical to $servermask
    - U:lined clients talk through SILENCE
    - RPL_AWAY response sent by sender's server, not recipient's
    - services-related behavior controlled by config.h
      (DENY_SERVICES_MSGS, PASS_SERVICES_MSGS, SUPER_TARGETS_ONLY)

- Reworked services special-casing:
    - shortform commands (NS/CS/etc) always sent between normal servers,
      translated to long forms for super servers
    - in SERVICESHUB mode:
        - shortforms sent to Services_Name
        - AWAY never sent to Services_Name
        - TOPIC in initial netburst not sent to Services_Name or Stats_Name
        - GOPER/GNOTICE/GLOBOPS/CHATOPS never sent to super servers
        - channel PRIVMSG/NOTICE never sent to super servers

- Server protocol changes:
    Added CHANKILL <channel> [reason]