@@ -236,6 +236,13 @@ port {
 # The ipmask token is used to limit the port to connections from the
 # specified IP mask.  Only a simple mask is supported, consisting of a *
 # where one component of the address is (e.g. "192.168.*.*").
+#
+# The flags token allows special behavior to be assigned to this
+# port, using a set of single-letter options.  The available flags are:
+#
+#     D  Disables dns resolving for this port
+#     I  Disables identd checking for this port
+#     S  Server-only port (also aplies the D and I flags)
 # 
 # There may be multiple Port blocks.
 ###########################################################################
