@@ -286,6 +286,7 @@ sConf confporttab[] =
     {SCONFT_PORT, SCONFF_PORT, VARTYPE_INT},
     {SCONFT_BIND, SCONFF_BIND, VARTYPE_NAME},
     {SCONFT_IPMASK, SCONFF_IPMASK, VARTYPE_NAME},
+    {SCONFT_FLAGS, SCONFF_FLAGS, VARTYPE_NAME},
     {(char *) 0, 0, 0}
 };
 
